--- a/src/main/resources/templates/auth/login.html
+++ b/src/main/resources/templates/auth/login.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-<form name="f" method="post" action="/login">
+<form name="f" method="post" action="/process_login">
     <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
 
     <label for="username">Введите имя пользователя: </label>
@@ -16,11 +16,9 @@
     <input type="password" name="password" id="password"/>
     <br/>
     <input type="submit" value="Login"/>
-
     <div th:if="${param.error}" style="color: red">
         Неправильное имя или пароль
     </div>
 </form>
-
 </body>
 </html>
