--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -10,4 +10,5 @@
 <form th:action="@{/logout}" th:method="POST">
     <input type="submit" value="Logout" />
 </form>
+<a th:href="@{/auth/registration}">Регистрация</a>
 </html>
