--- a/src/main/resources/templates/person/add.html
+++ b/src/main/resources/templates/person/add.html
@@ -5,7 +5,7 @@
     <title>Добавить пользователя</title>
 </head>
 <body>
-    <form th:method="POST" th:action="@{/caller}" th:object="${caller}">
+    <form th:method="POST" th:action="@{/templates/person}" th:object="${caller}">
         <label for="username">Введите имя пользователя: </label>
         <input type="text" th:field="*{username}" id="username"/>
         <div style="color:red" th:if="${#fields.hasErrors('username')}" th:errors="*{username}"></div>
