--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,11 +5,24 @@
     <title>Лучший работник</title>
 </head>
 <body>
-<div th:each="person : ${persons}">
-    <a th:href="@{/person/{name}/edit(name=${person.getUsername()})}"
-       th:text="${person.getUsername() + ', ' + person.getServiceDescription() + ', ' + person.getRating()}"></a>
-</div>
-
+<table>
+    <thead>
+    <tr>
+        <th>Имя работника</th>
+        <th>Рейтинг за год</th>
+        <th>Число отзывов за год</th>
+        <th>Подробнее</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr th:each="person : ${persons}">
+        <td th:text="${person.getUsername()}"></td>
+        <td th:text="${person.getRating()}"></td>
+        <td th:text="${person.getNumOfCalcReviews()}"></td>
+        <td><a th:href="@{/person/{name}(name=${person.getUsername()})}">Подробнее</a></td>
+    </tr>
+    </tbody>
+</table>
 <form th:action="@{/logout}" th:method="POST">
     <input type="submit" value="Logout" />
 </form>
