--- a/src/main/resources/templates/myerror.html
+++ b/src/main/resources/templates/myerror.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Test</title>
+    <title>Error</title>
 </head>
 <body>
-Test page
+Что-то пошло не так
 </body>
 </html>
