--- a/src/main/resources/templates/person/edit.html
+++ b/src/main/resources/templates/person/edit.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 <head>
     <meta charset="UTF-8">
     <title>Редактировать пользователя</title>
 </head>
 <body>
-    <form th:method="PATCH" th:action="@{/person/{name}(name=${person.getUsername()})}" th:object="${person}">
-        <label for="username">Мои ФИО: </label>
-        <input type="text" th:field="*{username}" id="username" readonly/>
-        <br/>
+    <form th:method="PATCH" th:action="@{/person/edit}" th:object="${person}">
+        <div>Имя: <span sec:authentication="name"></span></div>
         <label for="position">Моя дата рождения: </label>
         <input type="date" th:field="*{birthday}" id="position"/>
         <div style="color:red" th:if="${#fields.hasErrors('birthday')}" th:errors="*{birthday}"></div>
@@ -33,7 +32,10 @@
         <input type="text" th:field="*{price}" id="price"/>
         <div style="color:red" th:if="${#fields.hasErrors('price')}" th:errors="*{price}"></div>
         <br/>
-        <input type="submit" value="Редактировать"/>
+        <input type="submit" value="Сохранить"/>
     </form>
+    <a th:href="@{/person/edit_pass}">
+        <button>Изменить пароль</button>
+    </a>
 </body>
 </html>
