--- a/src/main/resources/templates/person/edit.html
+++ b/src/main/resources/templates/person/edit.html
@@ -6,6 +6,7 @@
     <title>Редактировать пользователя</title>
 </head>
 <body>
+<div th:replace="fragments/header :: header"></div>
     <form th:method="PATCH" th:action="@{/person/edit}" th:object="${person}">
         <div>Имя: <span sec:authentication="name"></span></div>
         <label for="position">Моя дата рождения: </label>
@@ -21,7 +22,7 @@
         <div style="color:red" th:if="${#fields.hasErrors('iamWorker')}" th:errors="*{iamWorker}"></div>
         <br/>
         <label for="serviceDescription">Описание услуг: </label>
-        <input type="text" th:field="*{serviceDescription}" id="serviceDescription"/>
+        <textarea rows="5" cols="100" th:field="*{serviceDescription}" id="serviceDescription"></textarea>
         <div style="color:red" th:if="${#fields.hasErrors('serviceDescription')}" th:errors="*{serviceDescription}"></div>
         <br/>
         <label for="experienceDate">Работаю по специальности с этой даты (стаж): </label>
@@ -37,5 +38,6 @@
     <a th:href="@{/person/edit_pass}">
         <button>Изменить пароль</button>
     </a>
+<div th:replace="fragments/footer :: footer"></div>
 </body>
 </html>
