--- a/src/main/resources/templates/person/edit_pass.html
+++ b/src/main/resources/templates/person/edit_pass.html
@@ -6,6 +6,7 @@
     <title>Редактировать пользователя</title>
 </head>
 <body>
+<div th:replace="fragments/header :: header"></div>
     <form th:method="PATCH" th:action="@{/person/edit_pass}" th:object="${password}">
         <div>Имя: <span sec:authentication="name"></span></div>
         <label for="oldPassword">Старый пароль: </label>
@@ -25,5 +26,6 @@
     <a th:href="@{/person/edit}">
         <button>Назад</button>
     </a>
+<div th:replace="fragments/footer :: footer"></div>
 </body>
 </html>
