--- a/src/main/resources/templates/review/add.html
+++ b/src/main/resources/templates/review/add.html
@@ -5,6 +5,7 @@
     <title>Добавить отзыв</title>
 </head>
 <body>
+<div th:replace="fragments/header :: header"></div>
 <form th:method="POST" th:action="@{/review}" th:object="${review}">
     <label for="caller">Заказчик: </label>
     <input type="text" th:field="*{caller.username}" id="caller" readonly/>
@@ -20,7 +21,7 @@
     <br/>
 
     <label for="reason">Причина вызова: </label>
-    <input type="text" th:field="*{reason}" id="reason"/>
+    <textarea rows="5" cols="100" th:field="*{reason}" id="reason"></textarea>
     <div style="color:red" th:if="${#fields.hasErrors('reason')}" th:errors="*{reason}"></div>
     <br/>
 
@@ -38,7 +39,7 @@
     <br/>
 
     <label for="comment">Комментарий: </label>
-    <input type="text" th:field="*{comment}" id="comment"/>
+    <textarea rows="5" cols="100" th:field="*{comment}" id="comment"></textarea>
     <div style="color:red" th:if="${#fields.hasErrors('comment')}" th:errors="*{comment}"></div>
     <br/>
 
@@ -51,5 +52,6 @@
 
     <input type="submit" value="Добавить отзыв"/>
 </form>
+<div th:replace="fragments/footer :: footer"></div>
 </body>
 </html>
