--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -24,12 +24,12 @@
         <td th:text="${person.getNumOfCalcReviews()}"></td>
         <td><a th:href="@{/person/{name}(name=${person.getUsername()})}">Подробнее</a></td>
     </tr>
+    <tr th:if="${persons.isEmpty()}">
+        <td colspan="4">Нет записей</td>
+    </tr>
     </tbody>
 </table>
-<form th:action="@{/logout}" th:method="POST">
-    <input type="submit" value="Logout" />
-</form>
-<a th:href="@{/registration}">Регистрация</a>
+
 <div th:replace="fragments/footer :: footer"></div>
 </body>
 </html>
