--- a/src/main/resources/templates/review/add.html
+++ b/src/main/resources/templates/review/add.html
@@ -7,6 +7,7 @@
 <body>
 <div th:replace="fragments/header :: header"></div>
 <form th:method="POST" th:action="@{/review}" th:object="${review}">
+
     <label for="caller">Заказчик: </label>
     <input type="text" th:field="*{caller.username}" id="caller" readonly/>
     <br/>
@@ -48,6 +49,7 @@
     <datalist id="rating_list">
         <option th:each="i: ${#numbers.sequence(0, 10)}" th:text="${i}">
     </datalist>
+    <div style="color:red" th:if="${#fields.hasErrors('rating')}" th:errors="*{rating}"></div>
     <br/>
 
     <input type="submit" value="Добавить отзыв"/>
