--- a/src/main/resources/templates/fragments/filter.html
+++ b/src/main/resources/templates/fragments/filter.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <div th:fragment="filter">
-    <script type="text/javascript" th:src="@{/js/filter/filter.js}"></script>
+    <script type="text/javascript" th:src="@{/js/filter.js}"></script>
     <label for="filterTextField"></label>
     <input type="text" th:value="${filter}" id="filterTextField"/>
     <button id="filterButton">Поиск</button>
