--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -1,3 +1,23 @@
-body{
-    color: #14023e;
+textarea {
+    resize: none;
+}
+.error_line{
+    color: red;
+}
+.left_align{
+    text-align: left;
+}
+.right_align{
+    text-align: right;
+}
+.center_align{
+    text-align: center;
+}
+body {
+    margin: 0 auto;
+    text-align: center
+}
+table{
+    margin-left: auto;
+    margin-right: auto;
 }
