--- a/src/main/resources/templates/auth/login.html
+++ b/src/main/resources/templates/auth/login.html
@@ -5,20 +5,32 @@
     <title>Авторизация</title>
 </head>
 <body>
-
+<div th:replace="fragments/header :: header"></div>
 <form name="f" method="post" action="/process_login">
     <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
+    <table>
+        <tbody>
+        <tr>
+            <td class="right_align"><label for="username">Введите имя пользователя: </label></td>
+            <td><input type="text" name="username" id="username"/></td>
+        </tr>
 
-    <label for="username">Введите имя пользователя: </label>
-    <input type="text" name="username" id="username"/>
-    <br/>
-    <label for="password">Введите пароль: </label>
-    <input type="password" name="password" id="password"/>
-    <br/>
-    <input type="submit" value="Login"/>
-    <div th:if="${param.error}" style="color: red">
-        Неправильное имя или пароль
-    </div>
+        <tr>
+            <td class="right_align"><label for="password">Введите пароль: </label></td>
+            <td><input type="password" name="password" id="password"/></td>
+        </tr>
+        <tr th:if="${param.error}">
+            <td colspan="2" class="error_line center_align">Неправильное имя или пароль</td>
+        </tr>
+        <tr>
+            <td colspan="2" class="center_align">
+                <input type="submit" value="Войти"/>
+            </td>
+        </tr>
+        </tbody>
+    </table>
+
 </form>
+<div th:replace="fragments/back_button :: back_button"></div>
 </body>
 </html>
