--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -7,6 +7,8 @@
 </head>
 <body>
 <div th:fragment="header">
+    <link th:href="@{/css/main.css}" rel="stylesheet"/>
+    <script type="text/javascript" th:src="@{/js/header_text.js}"></script>
     <div>Лучший работник года</div>
         <a sec:authorize="isAnonymous()" th:href="@{/login}"><button>Войти</button></a>
         <a sec:authorize="isAnonymous()" th:href="@{/registration}"><button>Регистрация</button></a>
@@ -15,13 +17,16 @@
             <input type="submit" value="Выйти" />
         </form>
 
-        <a sec:authorize="isAuthenticated()" th:href="@{/person/edit}"><button>Мои настройки</button></a>
+        <a sec:authorize="isAuthenticated()" th:href="@{/persons/edit}"><button>Мои настройки</button></a>
         <a th:href="@{/}"><button>Рейтинг рабочих</button></a>
-        <a sec:authorize="isAuthenticated()" th:href="@{/person/workers}"><button>Список всех рабочих</button></a>
-        <a sec:authorize="hasRole('ADMIN')" th:href="@{/person}"><button>Список всех пользователей</button></a>
-        <a sec:authorize="isAuthenticated()" th:href="@{/review}"><button>Все отзывы</button></a>
-        <a sec:authorize="isAuthenticated()" th:href="@{/review/my}"><button>Мои отзывы</button></a>
-        <a sec:authorize="isAuthenticated()" th:href="@{/review/on_me}"><button>Отзывы на меня</button></a>
+        <a sec:authorize="isAuthenticated()" th:href="@{/persons/workers}"><button>Список всех рабочих</button></a>
+        <a sec:authorize="hasRole('ADMIN')" th:href="@{/persons}"><button>Список всех пользователей</button></a>
+        <a sec:authorize="isAuthenticated()" th:href="@{/reviews}"><button>Все отзывы</button></a>
+        <a sec:authorize="isAuthenticated()" th:href="@{/reviews/my}"><button>Мои отзывы</button></a>
+        <a sec:authorize="isAuthenticated()" th:href="@{/reviews/on_me}"><button>Отзывы на меня</button></a>
+        <a sec:authorize="isAuthenticated()" th:href="@{/reviews/add}"><button>Добавить отзыв</button></a>
+    <div id="pageTitle"></div>
 </div>
+
 </body>
 </html>
