--- a/src/main/resources/templates/person/edit.html
+++ b/src/main/resources/templates/person/edit.html
@@ -1,43 +1,74 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org"
-      xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Редактировать пользователя</title>
 </head>
 <body>
 <div th:replace="fragments/header :: header"></div>
-    <form th:method="PATCH" th:action="@{/person/edit}" th:object="${person}">
-        <div>Имя: <span sec:authentication="name"></span></div>
-        <label for="position">Моя дата рождения: </label>
-        <input type="date" th:field="*{birthday}" id="position"/>
-        <div style="color:red" th:if="${#fields.hasErrors('birthday')}" th:errors="*{birthday}"></div>
-        <br/>
-        <label for="phone">Мой телефон: </label>
-        <input type="text" th:field="*{phone}" id="phone"/>
-        <div style="color:red" th:if="${#fields.hasErrors('phone')}" th:errors="*{phone}"></div>
-        <br/>
-        <label for="iamWorker">Я предоставляю услуги: </label>
-        <input type="checkbox" th:field="*{iamWorker}" id="iAmWorker"/>
-        <div style="color:red" th:if="${#fields.hasErrors('iamWorker')}" th:errors="*{iamWorker}"></div>
-        <br/>
-        <label for="serviceDescription">Описание услуг: </label>
-        <textarea rows="5" cols="100" th:field="*{serviceDescription}" id="serviceDescription"></textarea>
-        <div style="color:red" th:if="${#fields.hasErrors('serviceDescription')}" th:errors="*{serviceDescription}"></div>
-        <br/>
-        <label for="experienceDate">Работаю по специальности с этой даты (стаж): </label>
-        <input type="date" th:field="*{experienceDate}" id="experienceDate"/>
-        <div style="color:red" th:if="${#fields.hasErrors('experienceDate')}" th:errors="*{experienceDate}"></div>
-        <br/>
-        <label for="price">Мой ценник: </label>
-        <input type="text" th:field="*{price}" id="price"/>
-        <div style="color:red" th:if="${#fields.hasErrors('price')}" th:errors="*{price}"></div>
-        <br/>
-        <input type="submit" value="Сохранить"/>
+    <form th:method="PATCH" th:action="@{/persons/edit}" th:object="${person}">
+        <table>
+            <tbody>
+            <tr>
+                <td class="right_align"><label for="username">Мои Ф.И.О.:</label></td>
+                <td><input type="text" th:field="*{username}" id="username" readonly/></td>
+            </tr>
+            <tr th:if="${#fields.hasErrors('username')}">
+                <td colspan="2" class="error_line center_align" th:errors="*{username}"></td>
+            </tr>
+
+            <tr>
+                <td class="right_align"><label for="position">Моя дата рождения:</label></td>
+                <td><input type="date" th:field="*{birthday}" id="position"/></td>
+            </tr>
+            <tr th:if="${#fields.hasErrors('birthday')}">
+                <td colspan="2" class="error_line center_align"  th:errors="*{birthday}"></td>
+            </tr>
+
+            <tr>
+                <td class="right_align"><label for="phone">Мой телефон:</label></td>
+                <td><input type="text" th:field="*{phone}" id="phone"/></td>
+            </tr>
+            <tr th:if="${#fields.hasErrors('phone')}">
+                <td colspan="2" class="error_line center_align"  th:errors="*{phone}"></td>
+            </tr>
+
+            <tr>
+                <td class="right_align"><label for="iAmWorker">Я предоставляю услуги:</label></td>
+                <td><input type="checkbox" th:field="*{iamWorker}" id="iAmWorker"/></td>
+            </tr>
+
+            <tr>
+                <td class="right_align"><label for="serviceDescription">Описание услуг:</label></td>
+                <td><textarea rows="3" cols="30" th:field="*{serviceDescription}" id="serviceDescription"></textarea></td>
+            </tr>
+            <tr th:if="${#fields.hasErrors('serviceDescription')}">
+                <td colspan="2" class="error_line center_align" th:errors="*{serviceDescription}"></td>
+            </tr>
+
+            <tr>
+                <td class="right_align"><label for="experienceDate">Дата начала трудового стажа:</label></td>
+                <td><input type="date" th:field="*{experienceDate}" id="experienceDate"/></td>
+            </tr>
+
+            <tr>
+                <td class="right_align"><label for="price">Стоимость услуги:</label></td>
+                <td><input type="number" th:field="*{price}" id="price"/></td>
+            </tr>
+            <tr th:if="${#fields.hasErrors('price')}">
+                <td colspan="2" class="error_line center_align" th:errors="*{price}"></td>
+            </tr>
+
+            <tr>
+                <td class="center_align" colspan="2"><input type="submit" value="Сохранить"/></td>
+            </tr>
+            </tbody>
+        </table>
     </form>
-    <a th:href="@{/person/edit_pass}">
+    <a th:href="@{/persons/edit_pass}">
         <button>Изменить пароль</button>
     </a>
+<div th:replace="fragments/back_button :: back_button"></div>
 <div th:replace="fragments/footer :: footer"></div>
 </body>
 </html>
