--- a/src/main/resources/templates/person/index.html
+++ b/src/main/resources/templates/person/index.html
@@ -29,10 +29,10 @@
         <td th:text="${person.getPhone()}"></td>
         <td th:text="${person.getExperience()}"></td>
         <td th:text="${person.getPrice()}"></td>
-        <td th:text="${person.getRating()}"></td>
-        <td><a th:href="@{/person/{name}(name=${person.getUsername()})}">Подробнее</a></td>
+        <td th:text="${person.getStringRating()}"></td>
+        <td><a th:href="@{/persons/{name}(name=${person.getUsername()})}">Подробнее</a></td>
         <td><a th:if="${person.iamWorker && person.currentUserNotMe()}"
-               th:href="@{/review/add?workerName={name}(name=${person.getUsername()})}">Написать отзыв</a></td>
+               th:href="@{/reviews/add?workerName={name}(name=${person.getUsername()})}">Написать отзыв</a></td>
     </tr>
     <tr th:if="${persons.isEmpty()}">
         <td colspan="9">Нет записей</td>
